#+TITLE: Changelog
#+OPTIONS: H:10
#+OPTIONS: num:nil
#+OPTIONS: toc:2

* Unreleased

** Added

*** Emacs

+ initial =org-brain= configuration

** Changed

+ =rofi= is now used in place of =dmenu= for XMonad

*** Emacs

+ =Complete= agenda view now shows cancelled items

+ ~my-org-fill-column~ is now ~62~

** Fixed

*** =org-agenda=

+ all incomplete inbox items now show in =Unprocessed= agenda
  view

*** XMonad

+ =FreeMind= should now display correctly with XMonad

* 0.7.0 - 2018-07-12

** Added

+ ~history~ command now displays timestamps

*** Emacs

**** Commands

+ ~my-search-duckduckgo~

+ ~my-search-duckduckgo-site~

+ ~my-search-gtd-forum~

**** Org

+ capture template for single-day events

***** Agenda

+ new bulk command for cancelling and archiving marked entries

****** New Agenda Views

+ calendar

+ deadlines

+ someday/maybe

  + areas of focus

  + categories

  + potential projects

+ waiting for actions

** Changed

*** Emacs

+ ~calendar-date-style~ is now ~iso~

+ ~display-line-numbers-mode~ is now used instead of
  ~linum-mode~ for displaying line numbers

+ Helm grep variants are now used instead of Projectile
  variants for Git grep and AG grep

**** Org

***** Agenda Views

+ =Unprocessed= agenda view now triggered with ~u~ (previously
  ~T~)

****** =Complete= agenda view

+ now includes completed items from inbox

+ now loads much faster

***** =Event= capture template

+ no longer requires a time to be specified

+ now triggered with ~e t~ (previously ~c e~)

+ renamed to =Event (range)=

***** =Inbox= capture template

+ no longer includes a =CREATED= property

+ no longer includes current selection

* 0.6.0 - 2018-06-28

** Added

*** Org

+ agenda files for calendars

+ agenda view for completed projects/reminders

+ binding for creating "waiting for" headings

+ calendar syncing with =org-caldav=

+ refile target for calendar categories

** Changed

+ =projectile= will now use ~vc-git-grep~ in git projects

*** Org

**** Agenda
